# formation_python_data

./: .gitignore  README.md
project_structure/repo/: README.md  logging_02.yml  pytest.ini  setup.cfg
project_structure/repo/src/my_project/: main.py
project_structure/repo/test/: conftest.py
project_structure/repo/test/my_project/: test_main.py
tp1/: EXERCICES.md
tp1/repo/: pytest.ini  requirements-dev.txt
tp2/: EXERCICES.md  sample_logging.ini  sample_logging.yml
tp3/: EXERCICES.md
tp4/: EXERCICES.md
tp5/: EXERCICES.md  EXERCICES_DUCKDB.md  EXERCICES_NUMPY.md  EXERCICES_PANDAS.md  EXERCICES_PYARROW.md  EXERCICES_PYODBC_SQLITE.md  clients.csv  data.parquet  demo.db  list_func_duckdb.md  list_func_numpy.py  list_func_pandas.py  list_func_pyarrow.py  list_func_pyodbc.py  requirements.txt  sample_duckdb.py  sample_numpy.py  sample_pandas.py  sample_pyarrow.py  sample_pyodbc.py  sample_sqlite3.py
tp6/: EXERCICES.md
