[metadata]
name = my_project
version = 0.1.0
author = Default Author
author_email = author@example.com
description = Default project description
long_description = file: README.md
url = https://example.com/my_project
project_urls =
    Bug Tracker = https://example.com/bugtracker
    Changelog = https://example.com/changelog
    Documentation = https://example.com/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[aliases]
release = sdist bdist_wheel

[sdist]
formats = zip

[options]
package_dir =
    =src
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
# console_scripts =
#     my_project_cli = my_project.main:main