[metadata]
name = my_project                # Nom du package tel qu'il apparaîtra sur PyPI
version = 0.1.0                  # Version du package (suivre le SemVer : MAJOR.MINOR.PATCH)
author = Default Author          # Nom de l'auteur du package
author_email = author@example.com # Email de contact
description = Default project description # Courte description du projet
long_description = file: README.md       # Description longue (souvent le contenu du README)
url = https://example.com/my_project     # URL principale du projet (site officiel ou repo)
project_urls =                           # Liens supplémentaires utiles
    Bug Tracker = https://example.com/bugtracker
    Changelog = https://example.com/changelog
    Documentation = https://example.com/docs
classifiers =                             # Métadonnées pour PyPI (catégories)
    Programming Language :: Python :: 3   # Indique la compatibilité Python
    License :: OSI Approved :: MIT License # Type de licence
    Operating System :: OS Independent    # Compatibilité système

[aliases]
release = sdist bdist_wheel              # Alias pour la commande `python setup.py release` (crée source + wheel)

[sdist]
formats = zip                             # Format pour la distribution source (ici .zip au lieu de .tar.gz par défaut)

[options]
package_dir =
    =src                                  # Indique que le code source est dans le dossier `src`
packages = find:                          # Recherche automatique des packages dans `src`
install_requires = file:requirements.txt  # Dépendances à installer (liste dans requirements.txt)

[options.entry_points]
# console_scripts =                        # Permet de créer des commandes CLI après installation
#     my_project_cli = my_project.main:main # Exemple : `my_project_cli` exécute la fonction `main()` du module `my_project.main`
